WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270536
Unified PDF: HUD zoom buttons don't work on embedded pdfs
https://bugs.webkit.org/show_bug.cgi?id=270536
Summary
Unified PDF: HUD zoom buttons don't work on embedded pdfs
Tim Horton
Reported
2024-03-05 13:21:28 PST
Unified PDF: HUD zoom buttons don't work on embedded pdfs
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2024-03-05 13:21:32 PST
<
rdar://problem/122034458
>
Tim Horton
Comment 2
2024-03-05 13:48:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25503
EWS
Comment 3
2024-03-05 15:09:58 PST
Committed
275712@main
(2bcded219334): <
https://commits.webkit.org/275712@main
> Reviewed commits have been landed. Closing PR #25503 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug